--- a/gb/20/10/11/n12468511.md
+++ b/gb/20/10/11/n12468511.md
@@ -3,7 +3,7 @@
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/nsxsof363/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/nsxsof363/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/nsxsof363/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/nsxsof363/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【最新疫情10.18】欧美病例激增 但死亡人数少</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1210329499-600x400.jpg" />
-<h6>在欧洲和美国，疫情大流行中的中共病毒病例已连续第三次急剧上升，但据报导死亡人数并未按比例增加。( DAMIEN MEYER/AFP via Getty Images)
+<h6>在欧洲和美国，疫情大流行中的中共病毒病例已连续第三次急剧上升，但据报导死亡人数并未按比例增加。(DAMIEN MEYER/AFP via Getty Images)
 </h6>
 <hr>
 	<p>【大纪元2020年10月18日讯】（大纪元记者夏雨、戴芙若、林南、颜殊璟、萧律生综合报导）10月18日全球<ahref="https://github.com/nsxsof363/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.md#1">中共病毒</a>（<ahref="https://github.com/nsxsof363/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.md#1">武汉肺炎</a>）疫情最新情况：</p>
@@ -28,21 +28,21 @@
 <p><a name="_Toc2020101815"></a></p>
 <h3>欧美病例激增 但死亡人数少</h3>
 <p>在欧洲和美国，疫情大流行中的中共病毒病例已连续第三次急剧上升，但据报导死亡人数并未按比例增加。</p>
-<p>纽时报导，部分原因可能是更广泛的测试。密歇根大学的流行病学家乔恩·泽尔纳（Jon Zelner）说，许多其他病例很可能是在没有症状或轻度疾病的年轻人中发现的，这些病例以前可能没有被发现。他在接受采访时说，这就是密歇根州现在正在发生的事情。</p>
+<p>《纽时》报导，部分原因可能是更广泛地测试。密歇根大学的流行病学家乔恩·泽尔纳（Jon Zelner）说，许多其它病例很可能是在没有症状或轻度疾病的年轻人中发现的，这些病例以前可能没有被发现。他在接受采访时说，这就是密歇根州现在正在发生的事情。</p>
 <p>但是他说，这也可能只是时间问题。他说，现在发生的死亡案例大都是30至40天前患病的人。预计当前病例的增加将反映在11月死亡人数的增加上。</p>
 <p>在欧洲国家和美国各州，单日和每周记录新病例的增加，越来越普遍。</p>
 <p>在美国，过去14天的平均每日报告病例增加了28%，住院人数也在增加，而死亡人数仅增加了1%。</p>
 <p>俄亥俄州，印第安纳州，北达科他州，伊利诺伊州，新墨西哥州，怀俄明州，科罗拉多州，南达科他州，肯塔基州，西维吉尼亚州和爱达荷州本周报告的病例数均超过了之前的7天。明尼苏达州也是如此，尽管由于计算机更新，该州周六未报告新病例。</p>
 <p>这些州中只有一个州——北达科他州——是八个报告死亡人数相对于其人口最高的州。</p>
-<p>根据《泰晤士报》的数据库，在法国，上周报告了115,897例病例和619例死亡，然后在巴黎和其他城市实行了宵禁。意大利周六报告了10,925例新感染病例的记录，几乎是14天前平均感染人数的三倍，死亡案例47例。预计政府将在周日宣布进一步的限制。</p>
+<p>根据《泰晤士报》的数据库，在法国，上周报告了115,897例病例和619例死亡，然后在巴黎和其它城市实行了宵禁。意大利周六报告了10,925例新感染病例的记录，几乎是14天前平均感染人数的三倍，死亡案例47例。预计政府将在周日宣布进一步的限制。</p>
 <p>据卫生部称，波兰也达到了新的高度，周六有9,622例新感染，84例相关死亡。乌克兰已将封锁延长至今年年底，据其国家安全和国防委员会称，乌克兰周六分别记录了6,410例新感染和109例死亡。</p>
-<p>世界卫生组织周四表示，自大流行开始以来，欧洲地区每周发生的病例数最高。该组织的区域负责人汉斯·克鲁格（Hans Kluge）表示：“每天的病例数在增加，住院治疗在增加，COVID-19现在是第五大死亡原因，每天的死亡人数已经达到了1000例。”尽管如此，死亡人数仍比四月份的高峰少五倍。</p>
+<p>世界卫生组织周四表示，自大流行开始以来，欧洲地区每周发生的病例数最高。该组织的区域负责人汉斯·克鲁格（Hans Kluge）表示：“每天的病例数在增加，住院治疗在增加，COVID-19现在是第五大死亡原因，每天的死亡人数已经达到了1,000例。”尽管如此，死亡人数仍比四月份的高峰少五倍。</p>
 <p><a name="_Toc2020101814"></a></p>
 <h3>推特删白宫顾问“口罩无用论”推文</h3>
 <p>推特（Twitter）从白宫中共病毒高级顾问斯科特·阿特拉斯博士（Dr. Scott Atlas）那里删除了一条推文，该推文质疑口罩在对抗COVID-19方面的有效性。</p>
-<p>阿特拉斯在推文中写道：“口罩是否有效？否”，在其他几篇之前，有人质疑使用口罩防止中共病毒扩散。阿特拉斯还举了一些例子，他曾说过“即使强制戴口罩，案例也爆发了”，包括洛杉矶，迈阿密，夏威夷，阿拉巴马州，法国，菲律宾，英国，西班牙和以色列。</p>
+<p>阿特拉斯在推文中写道：“口罩是否有效？否”，在其它几篇之前，有人质疑使用口罩防止中共病毒扩散。阿特拉斯还举了一些例子，他曾说过“即使强制戴口罩，案例也爆发了”，包括洛杉矶，迈阿密，夏威夷，阿拉巴马州，法国，菲律宾，英国，西班牙和以色列。</p>
 <p>Twitter在给《国会山报》的一份声明中说，该医生的推文“违反了我们的COVID-19误导性信息政策”，“禁止共享与COVID-19相关的虚假或误导性内容，否则可能会造成伤害。”</p>
-<p>白宫中共病毒顾问在删除推文后回击Twitter，说：“这意味着正确的政策是@realDonaldTrump准则：将口罩用于其预定目的——当与其他人接近时，尤其是在高风险中，否则保持社交距离。没有广泛的授权。“常识”，阿特拉斯写道。</p>
+<p>白宫中共病毒顾问在删除推文后回击Twitter，说：“这意味着正确的政策是@realDonaldTrump准则：将口罩用于其预定目的——当与其他人接近时，尤其是在高风险中，否则保持社交距离。没有广泛地授权。“常识”，阿特拉斯写道。</p>
 <p><a name="_Toc2020101813"></a></p>
 <h3>WHO：欧洲某些地区的重症监护病房近满员</h3>
 <p>世界卫生组织说，欧洲的中共病毒爆发是“令人担忧的”，因为病例激增，某些地区的重症监护病房（ICU）床位已接近饱和。</p>
@@ -53,14 +53,14 @@
 <p>针对最新刺激协议的谈判，众议院议长南希·佩洛西（Nancy Pelosi）周日在致民主党同事的一封信中说：“尽管有一些令人鼓舞的消息，但仍有很多工作要做。”</p>
 <p>周日早些时候，她表示需要在48小时内与政府达成协议，才能在选举日之前通过法案。她的办公室说时间表将在星期二晚上结束。</p>
 <p>她继续说：“我们希望找到共同点。”她写道，“我对我们可以在选举前达成协议感到乐观。为此，我们在谈判优先事项时正在书写下来，以便我们一旦达成协议就已做好充分的准备。”</p>
-<h3>伊利诺伊州报告4,000余新增病例</h3>
+<h3>伊利诺伊州报告四千余新增病例</h3>
 <p>伊利诺伊州公共卫生部周日报告了4,245例新的COVID-19病例，22例死亡。</p>
 <p>该州的初步7天平均测试阳性率为5.3%。截至昨晚，已有2,012人因COVID-19住院，其中包括408名ICU患者和157名呼吸机患者。</p>
 <p>伊利诺伊州迄今已报告344,048例中共病毒病例，总计9,214例死亡。</p>
 <h3>明尼苏达州报告新增逾1,700例病例</h3>
 <p>明尼苏达州卫生部门周日报告了1,732例新的COVID-19病例，以及17例死亡。</p>
 <p>这使该州的COVID-19病例总数达到122,812，死亡总数为2,234。</p>
-<p>约翰·霍普金斯大学的最新数据显示，明尼苏达州连续10天每天的新增病例数超过1000例，该州自大流行以来报告的每日最高记录为2,290。</p>
+<p>约翰·霍普金斯大学的最新数据显示，明尼苏达州连续10天每天的新增病例数超过1,000例，该州自大流行以来报告的每日最高纪录为2,290。</p>
 <h3>纽约“红色区域”阳性率3.19% 整体阳性率为1.08%。</h3>
 <p>州长安德鲁·库默（Andrew Cuomo）周日宣布，纽约布鲁克林、皇后区、罗克兰和奥兰治县某些特定“红色区域”重点地区的平均COVID-19阳性率目前为3.19%，低于周六的4.34%。</p>
 <p>库默说，纽约的整体阳性率（包括红色区域）为1.08%。</p>
@@ -83,9 +83,9 @@
 <h3>爱尔兰宣布周一将实施全国性措施</h3>
 <p>高等教育部长西蒙·哈里斯（Simon Harris）周日表示，爱尔兰将于周一在全国范围内引入“决定性”的COVID-19限制，但将停止重新引入今年早些时候实行的封锁类型。</p>
 <p>爱尔兰政府在两周前拒绝了卫生部长的建议，即COVID-19遏制的警报级别调升为最高水平的5级，而是收紧了各种地区性措施的限制。</p>
-<p>周六，爱尔兰在一周之内第四次刷新了单日新增病例数量，过去14天中每10万人的病例数量达到232，这是在由欧洲疾病预防控制中心提供的受监测的31个国家/地区中排名的第12位。</p>
+<p>周六，爱尔兰在一周之内第四次刷新了单日新增病例数量，过去14天中每10万人的病例数量达到232，这是在由欧洲疾病预防控制中心提供的受监测的31个国家／地区中排名的第12位。</p>
 <p>哈里斯对国家广播公司RTE说：“政府将在明天采取行动，这将是决定性的行动，这将是全国性的行动。”哈里斯在3月底至5月中旬担任卫生部长期间，爱尔兰是欧洲实施最严格封锁措施的国家之一。</p>
-<p>政府在周三将其与受COVID-19打击较重的北爱尔兰临界的三个郡提升为警报级别的第4级，并禁止家庭之间的拜访。其他23个县处于3级警报，禁止所有餐厅室内就餐。</p>
+<p>政府在周三将其与受COVID-19打击较重的北爱尔兰临界的三个郡提升为警报级别的第4级，并禁止家庭之间的拜访。其它23个县处于3级警报，禁止所有餐厅室内就餐。</p>
 <p>在第4级之下，只有基本零售才能开放。在5级以下，人们将被要求留在家中，餐馆只能提供外卖和送货服务。</p>
 <h3>英国记录逾16,000例新病例</h3>
 <p>英国周日又录得16,982人感染，较周六增加811人。</p>
@@ -94,8 +94,8 @@
 <h3>瑞士宣布全国口罩令</h3>
 <p>为遏制COVID-19扩散，瑞士周日宣布了一系列包括口罩令的措施，将于周一生效。</p>
 <p>根据政府的声明，瑞士联邦委员会采取了一些全国性的措施??，例如要求在公共场所可进入的室内区域戴口罩。</p>
-<p>自7月初以来，年龄在12岁以上的人必须在公共交通上戴口罩，但是新增的措施将要求在公共可到达的公共交通区域戴口罩，例如火车站（包括站台）、机场、公交车站和电车站。现在，在商店、邮局、银行、博物馆、图书馆、体育设施、餐厅和其它可公共访问的空间中，也需要口罩。</p>
-<p>在学校，高等教育机构和儿童保育设施中也需要口罩。</p>
+<p>自7月初以来，年龄在12岁以上的人必须在公共交通上戴口罩，但是新增的措施将要求在公共可到达的公共交通区域戴口罩，例如火车站（包括站台）、机场、公交车站和电车站。现在，在商店、邮局、银行、博物馆、图书馆、体育设施、餐厅和其它可公共访问的空间中，也需要戴口罩。</p>
+<p>在学校，高等教育机构和儿童保育设施中也需要戴口罩。</p>
 <p>政府还禁止在城镇广场、街道、小径和公园等公共场所自发举行超过15人的公共聚会。但是，如果采取预防措施，则可以有组织的户外活动，例如游行。对于超过15人的私人活动，只能在就坐时食用食物和饮料，任何站起来的人都必须戴口罩。对于私人活动，必须遵守卫生规则，并且必须记录与会人员的联系方式。</p>
 <p>政府指出：“最近几天冠状病毒（中共病毒）病例迅速增加，令人深感担忧。”<br />
 <a name="_Toc2020101810"></a></p>
@@ -106,10 +106,10 @@
 <p>该人的阳性测试使人们对83岁的教皇方济各和其他高级神职人员的健康状况感到担忧，就在几天前，梵蒂冈瑞士卫队的四名成员测试为阳性。</p>
 <p>布鲁尼在本周早些时候表示，这些警卫全都表现出症状，在他们的测试结果出来后，在梵蒂冈开始了一次接触者追踪行动。当时宣布，其他三名梵蒂冈居民最近几天也呈阳性。</p>
 <p>梵蒂冈城位于罗马市内，是罗马教皇的故乡和罗马天主教会的总部。</p>
-<p>意大利在10月9日报告了5,000多例新的中共病毒病例，这是自3月28日以来新的COVID-19病例的每日最高增幅。意大利部长理事会周三通过了一项法令，该法令要求在户外强制使用口罩，以期减慢病毒在全国的传播速度。</p>
+<p>意大利在10月9日报告了五千多例新的中共病毒病例，这是自3月28日以来新的COVID-19病例的每日最高增幅。意大利部长理事会周三通过了一项法令，该法令要求在户外强制使用口罩，以期减慢病毒在全国的传播速度。</p>
 <h3>每日新增病例减少 以色列放宽部分限制</h3>
 <p>以色列已经开始放宽上个月在该国第二次全面封锁期间施加的一些限制，因为每天的中共病毒病例数持续下降。</p>
-<p>根据卫生部的数据，以色列在星期四和星期五分别记录了1,608例新病例和1,469例新病例，阳性率约为4.2%。这些数字比几周前以色列第二波高峰期的新病例大幅下降，当时一天就记录了9000多例，阳性率远远超过10%。</p>
+<p>根据卫生部的数据，以色列在星期四和星期五分别记录了1,608例新病例和1,469例新病例，阳性率约为4.2%。这些数字比几周前以色列第二波高峰期的新病例大幅下降，当时一天就记录了九千多例，阳性率远远超过10%。</p>
 <p>作为放宽的限制措施的一部分，将允许公民离开他们的家超过1公里。天然公园和海滩将重新开放。餐厅将允许外卖而不是仅外送。更多的企业将重新开放。</p>
 <p>总理本杰明·内塔尼亚胡（Benjamin Netanyahu）表示，经济的重新开放将循序渐进。内塔尼亚胡在星期六晚上强调说：“遵守规则很重要。”</p>
 <p>以色列有许多感染率高的“红色城市”，它们不会重新开放，并且严格的限制将继续存在。</p>
@@ -127,7 +127,7 @@
 <h3>德国总统进行自我隔离</h3>
 <p>目前，德国总统弗兰克-瓦尔特·施泰因迈尔（Frank-Walter Steinmeier）的发言人说，总统的一名保安测试呈阳性后，总统正在自我隔离。</p>
 <p>10月17日，德国总理默克尔向公民发出紧急呼吁。她说德国目前处于“极为严峻”的疫情大流行阶段，病毒的传播速度“比半年多前开始时要快得多”。她呼吁民众大幅减少社交接触，避免疫情蔓延失控。</p>
-<p>德国疾控机构罗伯特·科赫研究所当天数据显示，德国新增确诊病例7,830例，创该国疫情暴发以来单日新增病例数新高，累计确诊356,387例。</p>
+<p>德国疾控机构罗伯特·科赫研究所当天数据显示，德国新增确诊病例7,830例，创该国疫情爆发以来单日新增病例数新高，累计确诊356,387例。</p>
 <h3>瑞典报告了首例第二次感染病例</h3>
 <p>10月16日，瑞典研究人员报告了该国首例二次感染病例。患者是一名53岁女性，第二次感染中共病毒后症状较轻。</p>
 <p>今年5月，这名女子首次被确诊感染中共病毒，经治疗后病毒检测结果转阴，然而在8月接受检测时结果再次为阳性。</p>
@@ -143,7 +143,7 @@
 <p>在本周内新增5起确诊病例之前，泰国最近一次确认新增本土病例发生在9月11日。截至目前，泰国总共确诊3686例、死亡59例。</p>
 <p>而目前，泰国民众正在进行抗议活动，该国国王和总理的权威以及传统统治精英的权威被挑战。</p>
 <h3>北京武汉预约接种中共病毒疫苗 引专家忧虑</h3>
-<p>中国国药集团已经在北京和武汉开放预约接种中共疫苗，并且宣布出国留学生优先，报名者2个星期后可以到指定地点接种。南华早报报导，到10月13日星期二为止，已经有十五万五千多人报名，七十六万多人表示有兴趣。</p>
+<p>中国国药集团已经在北京和武汉开放预约接种中共疫苗，并且宣布出国留学生优先，报名者2个星期后可以到指定地点接种。《南华早报》报导，到10月13日星期二为止，已经有十五万五千多人报名，七十六万多人表示有兴趣。</p>
 <p>美国之音报导，原沃尔特·里德陆军研究所病毒专家林晓旭说，国药集团这么做是不合理的，因为就算是非常成功的疫苗，在这样大疫情之下，也应该考虑哪些地区的疫情比较严重，哪些医疗机构人员更需要打疫苗，而不是让民众来哄抢。</p>
 <p>他指出，国药公司这么做实际上是为了配合他们公司的股票升值的问题，是一种炒作。</p>
 <p>随后又有报导说，国药集团的官网上撤掉了报名的通道。但国药并没有出面澄清这个消息。这种缺乏透明度的做法令人质疑。</p>
@@ -170,8 +170,8 @@
 <p>据路透社分析，拉丁美洲是受影响最严重地区，约占全球总COVID-19病例的27%。</p>
 <p><a name="_Toc2020101803"></a></p>
 <h3>麦康奈尔提出“瘦”型救助法案 美参院下周投票</h3>
-<p>美国参议院多数党领袖米奇·麦康奈尔（Mitch McConnell）周六（10月17日）详细介绍了一项5000亿美元的“瘦”型救助法案，他说参议院将在下周三（10月21日）投票。</p>
-<p>该法案的目标比白宫的1.8万亿美元救助法案更具针对性，它将扩大联邦失业救济金，补充“工资保护计划”，向学校提供超过1000亿美元的资金，并为疫苗生产、分发以及测试和追踪提供资金。</p>
+<p>美国参议院多数党领袖米奇·麦康奈尔（Mitch McConnell）周六（10月17日）详细介绍了一项5,000亿美元的“瘦”型救助法案，他说参议院将在下周三（10月21日）投票。</p>
+<p>该法案的目标比白宫的1.8万亿美元救助法案更具针对性，它将扩大联邦失业救济金，补充“工资保护计划”，向学校提供超过1,000亿美元的资金，并为疫苗生产、分发以及测试和追踪提供资金。</p>
 <p>麦康奈尔说，除非民主党进行阻挠，否则参议院将对该法案进行投票，然后再对艾米·科尼·巴雷特法官的最高法院大法官确认进行投票。</p>
 <p>他需要60票才能在参议院通过该法案。民主党此前曾阻止过类似的法案。</p>
 <p>白宫提出了1.8万亿美元的救助法案，但众议院议长南希·佩洛西拒绝了白宫的法案。</p>
@@ -187,18 +187,18 @@
 <p>截至周六，英国57%的人口生活在更为严格的COVID-19限制之下。</p>
 <figure id="attachment_12483696" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/10/000_8TA93D.jpg"><img class="wp-image-12483696 size-large" src="https://i.epochtimes.com/assets/uploads/2020/10/000_8TA93D-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">周六（10月17日），英国示威者聚集在伦敦市中心，反对英国实施封锁措施。(JUSTIN TALLIS/AFP)</figcaption></figure>
 <h3>俄亥俄州新病例破2,000</h3>
-<p>俄亥俄州周六（10月17日）打破单日新病例纪录，且连续第四天每天超过2000例感染。<br />
+<p>俄亥俄州周六（10月17日）打破单日新病例纪录，且连续第四天每天超过2,000例感染。<br />
 周六。该州报告2234人被感染，病例总计180,225人。该州在过去三周中增加了30,000病例，平均每天增加1,439例。</p>
-<p>最近偶刘，俄亥俄州新增13人死亡，死亡总计5,067人。</p>
+<p>最近，俄亥俄州新增13人死亡，死亡总计5,067人。</p>
 <h3>印第安纳州新病例连续第二天破纪录</h3>
-<p>印第安纳州连续第二天刷新新感染记录。该州周六（10月17日）报告了2,521新病例，虽然说有100例属于旧病例，但仍超过周五创下的2,283例最高记录。</p>
+<p>印第安纳州连续第二天刷新新感染记录。该州周六（10月17日）报告了2,521新病例，虽然说有100例属于旧病例，但仍超过周五创下的2,283例最高纪录。</p>
 <p>自9月中旬以来，该州总病例数已达145,977，死亡总数3,685。</p>
 <figure id="attachment_12478351" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1224683910-1200x800.jpg"><img class="size-large wp-image-12478351" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1224683910-1200x800-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">位于印第安那州，彻斯特顿市的O&#8217;Gara and Wilson Antiquarian Booksellers古书收藏，店橱窗上的标语：“入内请戴面罩。”(Scott Olson/Getty Images)</figcaption></figure>
 <p><a name="_Toc2020101807"></a></p>
 <h3>美国大草原州病例增幅大</h3>
 <p>截至周六美东时间中午12：19，美国疾控中心（CDC）数据显示，过去七天每10万人平均有16.7人感染。</p>
 <p>根据约翰·霍普金斯的数据，美国平均每天新增约55,000病例，与一周前相比增长了16%以上。北达科他州、南达科他州、蒙大拿州和威斯康星州每10万居民中感染人数达最高。</p>
-<p>疫情在某些州变得严重。威斯康星州州长托尼?埃弗斯（Tony Evers）于本周在州立博览会公园启用另一家护理设施，该设施向染疫患者开放。</p>
+<p>疫情在某些州变得严重。威斯康星州州长托尼·埃弗斯（Tony Evers）于本周在州立博览会公园启用另一家护理设施，该设施向染疫患者开放。</p>
 <p>在北达科他州，病例数比一周前增长了近34%，当地官员担心一些医院可能没有足够人员来治疗重症者。</p>
 <p>今年春天，美国疫情最严重的州在东北部各州和西部的加州，夏季则是阳光地带的州病例激增。</p>
 <p>根据约翰·霍普金斯大学和彭博社汇编的数据，周五美国新病例增加69,276，是连续第四天上升，并且是7月29日以来的最高纪录。</p>
@@ -210,11 +210,11 @@
 <figure id="attachment_12483590" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/10/000_8TB6AN.jpg"><img class="wp-image-12483590 size-large" src="https://i.epochtimes.com/assets/uploads/2020/10/000_8TB6AN-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">10月17日，抗议人群聚集在首都布拉迪斯拉发（Bratislava）的政府办公室前，因为违反六人禁令，警察用水枪和胡椒喷雾驱散人群。警方称“数”人被拘留。(VLADIMIR SIMICEK/AFP)</figcaption></figure>
 <h3>法国单日新增三万多病例 创纪录</h3>
 <p>法国周六（10月16日）报告称，在过去24小时内，有32,427新病例。</p>
-<p>政府已于周六在巴黎地区和其他八个大都市地区实施宵禁，从晚上9点开始将人们限制在家中，直到凌晨6点，持续四个星期。</p>
+<p>政府已于周六在巴黎地区和其它八个大都市地区实施宵禁，从晚上9点开始将人们限制在家中，直到凌晨6点，持续四个星期。</p>
 <h3>不到一周时间 英国增10万病例</h3>
 <p>周六（10月17日），英国报告了16,171新病例，150人死亡。</p>
 <p>自上周日以来，英国已增加了十万多个新病例，几乎占705,428病例总数的15%。伦敦和埃塞克斯郊区周六已实施限制，人们被禁止在室内与家庭以外的人见面。</p>
-<figure id="attachment_12478668" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1229083102.jpg"><img class="wp-image-12478668 size-large" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1229083102-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">2020年10月15日，伦敦市中心维多利亚街沿途的公交车站候车亭显示本地Covid警报级别目前为中的标志。政府10月15日宣布伦敦的警报级别将从中调为高，伦敦人从而面临着更严格的COVID-19限制。(JUSTIN TALLIS/AFP via Getty Images)</figcaption></figure>
+<figure id="attachment_12478668" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1229083102.jpg"><img class="wp-image-12478668 size-large" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1229083102-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">2020年10月15日，伦敦市中心维多利亚街沿途的公交车站候车亭显示本地COVID-19警报级别目前为中的标志。政府10月15日宣布伦敦的警报级别将从中调为高，伦敦人从而面临着更严格的COVID-19限制。(JUSTIN TALLIS/AFP via Getty Images)</figcaption></figure>
 <p><a name="_Toc2020101806"></a></p>
 <h3>中共疫苗研发弯道超车 专家忧灾难性后果</h3>
 <p>中共在疫苗研发上信息始终不透明，也不依照一般国际通用规范，西方专家担心，这可能会造成“灾难性后果”。</p>
@@ -222,17 +222,17 @@
 <p>这个消息本周由中国《科创板日报》抢先报导后，《华尔街日报》紧接着引述两名中国准留学生的话报导，他们在国药集团的网站上注册后接到通知，其中一名已接种疫苗的陈同学说，她接种前签署一份同意书，同意书有告知疫苗仍在临床试验阶段，可能导致头疼和手臂疼痛等副作用。</p>
 <p>目前，国药集团官网查不到可注册接种疫苗的资讯。中共官方喉舌《人民日报》旗下报纸《健康时报》上周三又援引国药集团未具名人士的话报导称，“相关消息不实”。</p>
 <p>美国乔治城大学全球卫生法教授高斯登（Lawrence Gostin）透过电子邮件回复自由亚洲电台置评请求时说，“不遵守疫苗临床实验阶段所有该遵循的道德与规范标准，这可能会对人群遭成灾难性的伤害，即使只是疫苗实验里出现微小的安全风险，都有可能会放大。”</p>
-<figure id="attachment_12425921" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/09/virus-vaccine-China-700x420.jpg"><img class="size-large wp-image-12425921" src="https://i.epochtimes.com/assets/uploads/2020/09/virus-vaccine-China-700x420-600x360.jpg" alt="" width="600" b="360" /></a><figcaption class="wp-caption-text">图为示意图。(Nicolas Asfouri/AFP via Getty Images)</figcaption></figure>
+<figure id="attachment_12425921" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/09/virus-vaccine-China-700x420.jpg"><img class="size-large wp-image-12425921" src="https://i.epochtimes.com/assets/uploads/2020/09/virus-vaccine-China-700x420-600x360.jpg" alt="" width="600" b="360" /></a><figcaption class="wp-caption-text">示意图。(Nicolas Asfouri/AFP via Getty Images)</figcaption></figure>
 <p><a name="_Toc2020101804"></a></p>
 <h3>美防长：只有一名现役军人死于病毒</h3>
 <p>美国防长埃斯珀表示，自瘟疫大流行爆发以来，在美国130万军人中，只有1名现役军人死于中共病毒。</p>
 <p>美国军队在全球范围内部署人员，遍及150个国家。根据国防人力数据中心数据，在国外有多达165,000名永久驻军。</p>
 <p>国防部在网站上列出了因COVID-19造成的8例军事人员死亡，但该数字包括警卫或预备役人员。</p>
-<p>一名现役军人是首席航空兵、现年41岁的查尔斯?罗伯特?沙克尔（Charles Robert Thacker Jr.）于4月去世。沙克尔在西奥多?罗斯福（Theodore Roosevelt）航母上任职。</p>
+<p>一名现役军人是首席航空兵、现年41岁的查尔斯?罗伯特·沙克尔（Charles Robert Thacker Jr.）于4月去世。沙克尔在西奥多·罗斯福（Theodore Roosevelt）航母上任职。</p>
 <p>“我们的感染率远低于美国人民，每一次、每一次损失都是可怕的，但是感谢上帝，我们只失去了一名现役军人，而且部队的表现还不错。” 埃斯珀说。</p>
 <p>埃斯珀补充说，军方对服役人员进行训练、治疗、追踪并要求遵循协议。</p>
 <p>“你必须能够胜任工作，而且我们所有人都有能力做到这一点，无论你是最低级别的人员还是国防部长，无论如何，国防部都时刻准备好，我们准备继续并确保我们完成任务。”他说。</p>
-<figure id="attachment_12478868" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1226032125.jpg"><img class="wp-image-12478868 size-large" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1226032125-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">美国防部长埃斯珀（Mark Esper）资料图。（SAUL LOEB/AFP via Getty Images)</figcaption></figure>
+<figure id="attachment_12478868" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1226032125.jpg"><img class="wp-image-12478868 size-large" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1226032125-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">美国防部长埃斯珀（Mark Esper）资料图。(SAUL LOEB/AFP via Getty Images)</figcaption></figure>
 <p><a name="_Toc2020101805"></a></p>
 <h3>蓬佩奥：中共已经为瞒疫付出沉重代价</h3>
 <p>10月15日，美国国务卿蓬佩奥接受亚利桑那州KTAR新闻采访，主持人提到川普总统经常说中国（中共）释放病毒，要让中共付出代价，如何让中共付出代价呢？</p>
@@ -254,14 +254,14 @@
 <h3>疫情影响 美国品牌尝试电视购物</h3>
 <p>为了吸引居家购物者，一些品牌正在复制QVC。</p>
 <p>QVC是美国最大的电视购物公司，成立于1986年，总部位于美国宾夕法尼亚州威彻斯特，其旗下频道通过地面、卫星、有线电视及互联网面向全球多国播出。“QVC”的名称源自“Quality, Value, Convenience”（质量、价格、便捷）的首字母缩写。</p>
-<p>在不久前一个下午，有超过12,600名观众进入汤米?希尔费格（Tommy Hilfiger）网站，观看模特、网红和名人谈论该品牌的秋季系列。</p>
-<p>零售商试图吸引长期以来在QVC和家庭购物网络上流连的消费者。汤米?希尔费格（Tommy Hilfiger）和列维?斯特劳斯（Levi Strauss）等品牌希望不愿逛商店的购物者参加现场直播的在线销售活动，并在假期购物季节来临之前购买荷叶边衬衫、手袋和其它非必需品。</p>
-<p>观众可以在活动期间与演示者聊天，然后单击商品以将其添加到虚拟购物车中进行购买。汤米?希尔菲格（Tommy Hilfiger）的首席营销官迈克尔?施纳纳（Michael Scheiner）说，观众的许多疑问都与休闲装的趋势有关。</p>
+<p>在不久前一个下午，有超过12,600名观众进入汤米·希尔费格（Tommy Hilfiger）网站，观看模特、网红和名人谈论该品牌的秋季系列。</p>
+<p>零售商试图吸引长期以来在QVC和家庭购物网络上流连的消费者。汤米·希尔费格（Tommy Hilfiger）和列维·斯特劳斯（Levi Strauss）等品牌希望不愿逛商店的购物者参加现场直播的在线销售活动，并在假期购物季节来临之前购买荷叶边衬衫、手袋和其它非必需品。</p>
+<p>观众可以在活动期间与演示者聊天，然后单击商品以将其添加到虚拟购物车中进行购买。汤米?希尔菲格（Tommy Hilfiger）的首席营销官迈克尔·施纳纳（Michael Scheiner）说，观众的许多疑问都与休闲装的趋势有关。</p>
 <p>Coresight Research预测，到2023年，美国的直播购物活动将产生250亿美元销售额。</p>
 <figure id="attachment_6541356" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2015/12/1512230920301973.jpg"><img class="size-large wp-image-6541356" src="https://i.epochtimes.com/assets/uploads/2015/12/1512230920301973-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">纽约梦幻圣诞夜 品味传统与时尚。纽约第五大道TOMMY HILFIGER 的圣诞灯饰。（戴兵／大纪元）</figcaption></figure>
 <h3>疫情期间 美国年轻人利用远程工作机会出游</h3>
 <p>很多人可能认为中共病毒大流行不是驾车旅行的好时机，但对于一些年轻的美国人来说，这是驾车旅行的完美时光。</p>
-<p>彭博社报导，整个夏天，布雷特?科拉齐（Bret Collazzi）和未婚妻高迪（Di Gao）决定放弃他们在纽约的公寓租约，购买汽车，展开全国范围的远程旅行。秋天的计划是从纽约驱车前往西雅图，然后前往加州、德州的城市，再去路易斯安那州。</p>
+<p>彭博社报导，整个夏天，布雷特·科拉齐（Bret Collazzi）和未婚妻高迪（Di Gao）决定放弃他们在纽约的公寓租约，购买汽车，展开全国范围的远程旅行。秋天的计划是从纽约驱车前往西雅图，然后前往加州、德州的城市，再去路易斯安那州。</p>
 <p>根据人口普查局的家庭脉动（Household Pulse）调查，9月2日至14日，超过34%的人将部分或全部远程上班。</p>
 <p>低薪工作的人通常没有高收入者的上班灵活性：年收入超过100,000美元的家庭中，超过61%的家庭表示，他们可以远程办公，而年收入不足100,000美元的家庭，这一数字只有25%。</p>
 <p>尽管旅游业在三月份几乎停滞不前，但是美国人已经开始外出。Nestpick首席执行官Omer Kucukdere表示，有证据表明美国人的旅行时间更长。Nestpick专门研究中长期带家具的公寓租赁。</p>
@@ -291,7 +291,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/10/n10965703.md#1" target="_blank">共产暴政录：广西文革大屠杀事件</a></li><li><a href="https://github.com/nsxsof363/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/8/n11243139.md#1" target="_blank">治病与救人 警察为近八旬大夫“站岗”</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/4/n11566782.md#1" target="_blank">凌晓辉：当代人类的天书（二）</a></li><li><a href="https://github.com/nsxsof363/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/7/4/n3627160.md#1" target="_blank">心湖：中共是破坏道德的罪魁祸首</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
