--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -4,6 +4,7 @@
 <a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/17/n12482137.md#1" title="【最新疫情10.19】川普：勿忘病毒来自中国""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/464745-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/19/n12485442.md#1" title="华为大势已去？跨大西洋联盟打造清洁网络""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/000_8T3938-1-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12485256.md#1" title="川普抵加州橙县 上万选民海陆两地欢迎""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/2-5-1-320x200.jpg">&nbsp;</a>
+<a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12485050.md#1" title="中共为何强行火化他们的遗体（15）""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/Screen-Shot-2020-10-18-at-7.06.39-PM-320x200.png">&nbsp;</a>
 <a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/17/n12483177.md#1" title="美国对中产阶级最好和最糟的十个州""><img width="73" src="https://i.epochtimes.com/assets/uploads/2019/07/GettyImages-51599832-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12485086.md#1" title="朱利安尼：拜登儿子抱怨 钱财与老爹分半""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-76111059-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12485003.md#1" title="伊朗称联合国武器禁运到期 蓬佩奥强烈回应""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/06/000_1QR3K3-320x200.jpg">&nbsp;</a>
@@ -11,14 +12,13 @@
 <a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12484566.md#1" title="【大时代华人】一家挺川反共的纽约教会""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/IMG_2122-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/11/n12468511.md#1" title="【最新疫情10.18】欧美病例激增 但死亡人数少""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1210329499-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12484690.md#1" title="钟原：中共政治局学习量子科技难解困境""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-902793308-320x200.jpg">&nbsp;</a>
-<a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12484524.md#1" title="疫情期间 大陆“罚款经济”愈发严重""><img width="73" src="https://i.epochtimes.com/assets/uploads/2011/03/1103102129062320-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/nsxsof363/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://nsxsof363.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>6分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/19/n12486008.md#1">钟南山称板蓝根可治新冠病毒 中共官媒曾辟谣</a><br>
-:clock8: <em>12分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/19/n12486161.md#1">日本研究机构遭网攻 疑中共骇客窃疫苗情报</a><br>
-:clock8: <em>23分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/19/n12485923.md#1">传新华社人事变动 总编辑何平接任社长</a><br>
-:clock8: <em>31分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/19/n12486071.md#1">组图：川普内华达州竞选集会 谈经济政策</a><br>
-:clock8: <em>35分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/19/n12486089.md#1">田云：推特涉嫌干预美大选 言论审查水多深？</a><br>
-:clock8: <em>45分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/19/n12486027.md#1">丑闻爆发前 脸书推特高层加入拜登竞选团队</a><br>
+:clock8: <em>14分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/19/n12486008.md#1">钟南山称板蓝根可治新冠病毒 中共官媒曾辟谣</a><br>
+:clock8: <em>21分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/19/n12486161.md#1">日本研究机构遭网攻 疑中共骇客窃疫苗情报</a><br>
+:clock8: <em>31分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/19/n12485923.md#1">传新华社人事变动 总编辑何平接任社长</a><br>
+:clock8: <em>39分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/19/n12486071.md#1">组图：川普内华达州竞选集会 谈经济政策</a><br>
+:clock8: <em>44分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/19/n12486089.md#1">田云：推特涉嫌干预美大选 言论审查水多深？</a><br>
+:clock8: <em>53分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/19/n12486027.md#1">丑闻爆发前 脸书推特高层加入拜登竞选团队</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/17/n12482636.md#1">大陆二手房市场分化严重 房地产泡沫要破？</a><br>
 <a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12483904.md#1">【翻墙必看】习在京露面 分析：暴露诡异之处</a><br>
@@ -42,7 +42,7 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 365,806,523 人
+!共 365,807,540 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
@@ -60,10 +60,10 @@
 <a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12485038.md#1">新能源车垫砖头空跑 这家中共国企曾被指骗补</a><br>
 <a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/19/n12485912.md#1">“原创”的反义词是啥？ 学生作业调侃“中国”</a><br>
 <a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12485042.md#1">陈坤准时为周迅庆生 连续11年从未中断</a><br>
-<a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12485050.md#1">中共为何强行火化他们的遗体（15）</a><br>
 <a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12484807.md#1">【役情最前线】王岐山命运难料 新林彪事件恐现</a><br>
 <a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12484953.md#1">章子怡产后首秀 发际线上移引热议</a><br>
 <a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12484792.md#1">洪金宝拄拐杖近照曝光 网民惊讶</a><br>
+<a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12484524.md#1">疫情期间 大陆“罚款经济”愈发严重</a><br>
 <a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12484237.md#1">大陆3季度粮价上涨 玉米每吨价格创4年新高</a><br>
 <a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/18/n12484118.md#1">中共大使威胁在港30万加人安全 激怒加拿大人</a><br>
 <a href="https://github.com/nsxsof363/djy/blob/master/gb/20/10/17/n12483509.md#1">拜登电脑门 美参议员要FBI回答六大问题</a><br>
